# backend/models/project.go
@@ -12,6 +12,7 @@ type Project struct {
 	TeamMember   TeamMember `gorm:"foreignKey:TeamMemberID" json:"team_member" binding:"-"`
 	ClientID  *uint   `json:"client_id"` 
 	Client    *Client `json:"client,omitempty" gorm:"foreignKey:ClientID" binding:"-"`
+	Tasks []Task `json:"tasks" gorm:"foreignKey:ProjectID"`
 	CreatedAt    time.Time  `json:"created_at"`
 	UpdatedAt    time.Time  `json:"updated_at"`
 }
